# trap

./: CMakeLists.txt
include/trap/: trap.h
src/: trap.cpp
